Support extracting highlighted range to a constant